# harmony-cli

./: .gitignore  AGENTS.md  README.md  harmony.py  main.py  package.json  pyproject.toml  requirements.txt  tools.py  tsconfig.json
src/: cli.py  cli.tsx  harmony.ts  index.tsx  tools.py  tools.ts  types.ts
src/harmony_cli/: __init__.py  __main__.py  cli.py  harmony.py  tools.py
