[project]
name = "harmony-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "pygments==2.19.2",
    "pyinstaller>=6.16.0",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rich==14.1.0",
    "tiktoken==0.11.0",
    "urllib3==2.5.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
packages = ["harmony_cli"]

[project.scripts]
harmony = "harmony_cli.cli:main"
